# LiveRecorder

./: .gitignore  LICENSE  README.md  build.spec  config.json  config.sample.json  live_recorder.py  main.py  main.spec  pyproject.toml  requirements.txt
.github/: stale.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.md  feature-request.yml
.github/workflows/: build.yml
