[tool.poetry]
name = "live_recorder"
version = "v2.21"
description = "基于Streamlink的全自动直播录制工具，已支持哔哩哔哩、斗鱼、虎牙、抖音、YouTube、Twitch等"
authors = ["auqhjjqdo <auqhjjqdo@qq.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/auqhjjqdo/LiveRecorder"
documentation = "https://github.com/auqhjjqdo/LiveRecorder#readme"
keywords = ["LiveRecorder", "Live", "Streamlink", "Bilibili", "Douyu", "Douyin", "YouTube", "Twitch"]


[tool.poetry.dependencies]
python = "^3.8"
#streamlink = "^6.0.1"
streamlink = { git = "https://github.com/streamlink/streamlink" }
httpx = { extras = ["http2"], version = "^0.24.1" }
ffmpeg-python = "^0.2.0"
loguru = "^0.7.0"
jsonpath-ng = "^1.5.3"
jsengine = "^1.0.7.post1"
quickjs = "^1.19.2"
tenacity = "^8.2.2"
#https://github.com/JamzumSum/socksio
socksio = { path = "build/socksio-1.0.0-py3-none-any.whl" }


[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "default"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
