[project]
name = "LiveRecorder"
version = "0.1.0"
description = "基于Streamlink的全自动直播录制工具，已支持哔哩哔哩、斗鱼、虎牙、抖音、YouTube、Twitch等"
authors = [
    {name = "auqhjjqdo", email = "auqhjjqdo@qq.com"},
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}
keywords = ["LiveRecorder", "Live", "Streamlink", "Bilibili", "Douyu", "Douyin", "YouTube", "Twitch"]
dependencies = [
    "streamlink>=6.8.2",
    "httpx[http2]>=0.27.0",
    "ffmpeg-python>=0.2.0",
    "loguru>=0.7.2",
    "jsonpath-ng>=1.6.1",
    "jsengine>=1.0.7.post1",
    "quickjs>=1.19.4",
    "httpx-socks[asyncio]>=0.9.1",
]

[project.urls]
repository = "https://github.com/auqhjjqdo/LiveRecorder"
documentation = "https://github.com/auqhjjqdo/LiveRecorder#readme"


[tool.pdm]
distribution = false
